// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when there are multiple items 1`] = `
<ul>
  <li
    className="empty-message"
  >
    one
  </li>
  <li
    className="empty-message"
  >
    two
  </li>
  <li
    className="empty-message"
  >
    three
  </li>
</ul>
`;

exports[`renders correctly when there are no items 1`] = `
<span
  className="empty-message"
>
  No items in list
</span>
`;

exports[`renders correctly when there is a single item 1`] = `
<span
  className="empty-message"
>
  one
</span>
`;
